<resources>
    <string name="app_name">Geo Quiz</string>
    <string name="button_false">False</string>
    <string name="button_true">True</string>
    <string name="toast_correct">Correct</string>
    <string name="toast_incorrect">InCorrect</string>

    <string name="question_australia">استرالیا بزرگ ترین قاره جهان است.</string>
    <string name="question_oceans">اقیانوس آرام بزرگ ترین اقیانوس جهان است.</string>
    <string name="question_mideast">همه کشورهای خاورمیانه عرب زبان هستند.</string>
    <string name="question_africa">مصر در قاره آفریقا قرار دارد.</string>
    <string name="question_americas">کشور آمریکا پرجمعیت ترین کشور دنیا است.</string>
    <string name="question_asia">قاره آسیا در نیم کره جنوبی جهان واقع شده است.</string>
    <string name="button_next">Next</string>
    <string name="previous">Previous</string>
    <string name="last">Last</string>
    <string name="first">First</string>
    <string name="game_over">GAME OVER!</string>
    <string name="cheat">Cheat</string>
    <string name="reveal_answer">Reveal Answer</string>
    <string name="are_you_sure">Are You Sure?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
